@@ -383,3 +383,6 @@ in 0.1.13.
 
 0.1.25
 ------
+- Add NPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION define to cython extension
+  building to remove warnings. This requires a different mode of access to
+  the array data.
